# nrf52-hal

examples/i2s-peripheral-demo/: Cargo.toml
examples/i2s-peripheral-demo/.cargo/: config
examples/i2s-peripheral-demo/src/: main.rs
examples/rtfm-uarte-interrupts/src/: main.rs
nrf-hal-common/src/: i2s.rs
nrf52-hal-common/src/: uarte.rs
