[package]
name = "i2s-peripheral-demo"
version = "0.1.0"
authors = ["Henrik AlseÌr"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.3"
cortex-m-rtic = "0.5.5"
rtt-target = {version = "0.2.2", features = ["cortex-m"] }
nrf52840-hal = { features = ["rt"], path = "../../nrf52840-hal" }

[dependencies.embedded-hal]
version = "0.2.4"
features = ["unproven"]

# for cargo flash
[package.metadata]
chip = "nRF52840_xxAA"

[dependencies.panic-probe]
git = "https://github.com/knurling-rs/probe-run"
branch = "main"